--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,12 @@
 label {
     font-weight: bold;
 }
+
+.nav-link[data-toggle].collapsed:after {
+    content: " ▾";
+    font-size: 20px;
+}
+.nav-link[data-toggle]:not(.collapsed):after {
+    content: " ▴";
+    font-size: 20px;
+}
